; ModuleID = '/home/carl/AnghaBench/linux/mm/extr_page_alloc.c___alloc_pages_cpuset_fallback.c'
source_filename = "/home/carl/AnghaBench/linux/mm/extr_page_alloc.c___alloc_pages_cpuset_fallback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.page = type { i32 }
%struct.alloc_context = type { i32 }

@ALLOC_CPUSET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.page* (i32, i32, i32, %struct.alloc_context*)* @__alloc_pages_cpuset_fallback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.page* @__alloc_pages_cpuset_fallback(i32 %0, i32 %1, i32 %2, %struct.alloc_context* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.alloc_context*, align 8
  %9 = alloca %struct.page*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store %struct.alloc_context* %3, %struct.alloc_context** %8, align 8
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* %7, align 4
  %13 = load i32, i32* @ALLOC_CPUSET, align 4
  %14 = or i32 %12, %13
  %15 = load %struct.alloc_context*, %struct.alloc_context** %8, align 8
  %16 = call %struct.page* @get_page_from_freelist(i32 %10, i32 %11, i32 %14, %struct.alloc_context* %15)
  store %struct.page* %16, %struct.page** %9, align 8
  %17 = load %struct.page*, %struct.page** %9, align 8
  %18 = icmp ne %struct.page* %17, null
  br i1 %18, label %25, label %19

19:                                               ; preds = %4
  %20 = load i32, i32* %5, align 4
  %21 = load i32, i32* %6, align 4
  %22 = load i32, i32* %7, align 4
  %23 = load %struct.alloc_context*, %struct.alloc_context** %8, align 8
  %24 = call %struct.page* @get_page_from_freelist(i32 %20, i32 %21, i32 %22, %struct.alloc_context* %23)
  store %struct.page* %24, %struct.page** %9, align 8
  br label %25

25:                                               ; preds = %19, %4
  %26 = load %struct.page*, %struct.page** %9, align 8
  ret %struct.page* %26
}

declare dso_local %struct.page* @get_page_from_freelist(i32, i32, i32, %struct.alloc_context*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
